--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,8 @@ h1 {
     padding-left: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4;
+    overflow: hidden;
+}
