--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,12 @@ body {
     align-items: center;
     list-style: none;
 }
+#navbar h2 a {color: #fff;
+    text-decoration: none;
+
+}
+#navbar li a {
+    text-decoration: none;
+    color: #fff;
+    padding: 1rem;
+}
