--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
     background-color: #3693ff;
 }
 /* showcase area */
-#showcase {
+#container {
     background: url(../resume/image.jpeg) no-repeat center center/cover;
 }
 .showcase-content {
