--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,93 @@ color: #fff;
     border-radius: 10px;
     font-weight: bold;
 }
+/* Section: About */
+#about {
+    padding: 5rem 0;
+    text-align: center;
+    
+
+}
+#about h2 {
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+#about h3 {
+    font-size: 2rem;
+    margin-bottom: 1 rem;
+
+}
+#about .about-content {
+    display: flex;
+    position: absolute;
+}
+#about .about-text {
+    text-align: center;
+}
+#about .about-image img {
+    display: block;
+    margin-left: auto;
+    width: 75%;
+    border-radius: 40%;
+    margin-top: auto;
+}
+/* Section: contact */
+#contact {
+    padding: 5rem 0;
+}
+#contact h2 {
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 8rem;
+}
+#contact h3 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 3rem 0;
+    margin-top: 5rem;
+}
+#contact .form-box {
+    background: #fff;
+    padding: 3rem;
+    box-shadow: 2px 2px 2px #d1d1d1;
+    border-radius: 10px;
+
+}
+#contact .form-group {
+    margin-bottom: 2rem;
+}
+#contact .form-group label {
+    display: block;
+    margin-bottom: 0.5rem;
+    width: 80%;
+    margin-left: 10%;
+    font-size: 1.1 rem;
+}
+#contact .form-group input,
+#contact .form-group textarea {
+    width: 80%;
+    margin-left: 10%;
+    font-size: 1.3rem;
+    padding: 1rem;
+    border: 0.5px solid #fff;
+    border-radius: 5px;
+}
+#contact .form-group textarea {
+    font-family: Arial, Helvetica, sans-serif;
+}
+#contact .contact-btn {
+    width: 80%;
+    margin-left: 10%;
+    display: inline-block;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 1rem 3rem;
+    margin-bottom: 2rem;
+    background: blue;
+    border-radius: 5px;
+}
+#contact .contact-btn:hover {
+    background: blue;
+}
