--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,13 @@ body {
     }
 .showcase-content h1 {
     font-size: 4rem;
-    margin-bottom: 2rem;
+    margin-bottom: 80rem;
 }
 .showcase-content .btn:hover {
 background: #3693ff;
 color: #fff;
 padding: 1rem 10rem;
+margin-bottom: 80rem;
 }
 .btn {
     color: royalblue;
@@ -83,11 +84,14 @@ padding: 1rem 10rem;
     border: 1px solid #3693ff;
     border-radius: 10px;
     font-weight: bold;
+    
 }
 /* Section: About */
 #about {
     padding: 5rem 0;
     text-align: center;
+    margin-bottom: 10%;
+    margin-top: 15%;
     
 
 }
@@ -99,11 +103,17 @@ padding: 1rem 10rem;
 #about h3 {
     font-size: 2rem;
     margin-bottom: 1 rem;
+    text-align: center;
 
 }
+#about p.lead {
+    margin-bottom: 1rem;
+    text-align: center;
+}
 #about .about-content {
-    display: flex;
+    display: inline-flex;
     position: absolute;
+    text-align: center;
 }
 #about .about-text {
     text-align: center;
