aligned contact section

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,9 @@ margin-bottom: 80rem;
 #contact {
     padding: 5rem 0;
 }
+* {
+    text-align: center;
+}
 #contact h2 {
     text-align: center;
     font-size: 3rem;
