--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ margin-bottom: 80rem;
     border: 1px solid #3693ff;
     border-radius: 10px;
     font-weight: bold;
+    position: fixed;
     
 }
 /* Section: About */
@@ -92,13 +93,12 @@ margin-bottom: 80rem;
     text-align: center;
     margin-bottom: 10%;
     margin-top: 15%;
-    
-
 }
 #about h2 {
     text-align: center;
     font-size: 3rem;
     margin-bottom: 3rem;
+    color: blue;
 }
 #about h3 {
     font-size: 2rem;
