--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@ h1 {
     margin: 0;
     padding-left: 0;
     box-sizing: border-box;
+    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.scroll {
+    overflow: auto;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -84,7 +92,6 @@ margin-bottom: 80rem;
     border: 1px solid #3693ff;
     border-radius: 10px;
     font-weight: bold;
-    position: fixed;
     
 }
 /* Section: About */
